--- a/configure.ac
+++ b/configure.ac
@@ -1,31 +1,22 @@
+dnl Copyright 2009-2010 Saleem Abdulrasool <compnerd@compnerd.org>
 dnl vim: set sw=8 sts=8 ts=8 noet fdm=marker fmr={{{,}}} :
 
 dnl {{{ program, version
 AC_PREREQ(2.59)
-AC_INIT(libace, 0.0, compnerd@compnerd.org)
+AC_INIT(libace, 0.0.1, compnerd@compnerd.org)
 AC_CONFIG_AUX_DIR(config)
-AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE([1.11.1 dist-bzip2 subdir-objects])
 dnl }}}
 
 dnl {{{ basic toolchain checks
 AC_PROG_CXX
 AC_PROG_INSTALL
-AC_PROG_LN_S
 AC_PROG_LIBTOOL
-AC_PROG_MAKE_SET
 dnl }}}
 
 dnl {{{ output
-AM_CONFIG_HEADER(config/config.h)
-AC_OUTPUT(
-	  Makefile
-	  src/Makefile
-	 )
-dnl }}}
-
-dnl {{{ summary
-echo
-echo "Prefix                 : $prefix"
-echo
+AM_SILENT_RULES(yes)
+AC_CONFIG_FILES(Makefile)
+AC_OUTPUT
 dnl }}}
 
